endpoint: create patient profile
