# src/api/routes.ts
@@ -17,6 +17,7 @@ api.get(ROUTES.APPOINTMENTS.ALL, appointmentHandler.findAll);
  * Patients routes
  */
 api.get(ROUTES.PATIENT.BY_ID, checkJwt, patientHandler.getProfile);
+api.post(ROUTES.PATIENT.ALL, patientHandler.createProfile);
 api.get(ROUTES.PATIENT.APPOINTMENTS.ALL, checkJwt, patientHandler.getAppointments);
 api.get(ROUTES.PATIENT.TREATMENTS.ALL, checkJwt, patientHandler.getTreatments);
 api.delete(ROUTES.PATIENT.APPOINTMENTS.BY_ID, checkJwt, appointmentHandler.cancelAppointment)
